<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewsClasses.NewsActivity.NewsHeadLinesActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/primary"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/btn_language"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_language"
            android:background="@drawable/custom_btn_language"
            android:backgroundTint="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"/>

    </RelativeLayout>
    
    <HorizontalScrollView
        android:id="@+id/horizontal_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:queryHint="Search news"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_1"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_2"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_3"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_4"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_5"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_6"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category_7"
                android:layout_margin="6dp"/>

        </LinearLayout>
        
    </HorizontalScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>